[package]
name = "leetcode_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.11.0"
permutohedron = "0.2.4"
regex = "1.8.4"
once_cell = "1.10.0"
lazy_static = "1.4.0"

# #[macro_use]
# extern crate lazy_static;
