[package]
name = "leetcode_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
rand = "0.8.4"
itertools = "0.11.0"
permutohedron = "0.2.4"
regex = "1.8.4"
once_cell = "1.10.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.12", features = ["blocking", "rustls-tls"] }
scraper = "0.13.0"
thiserror = "1.0.37"
